--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,100 +16,36 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Deploy to PythonAnywhere
-        env:
-          PA_USERNAME: ${{ secrets.PA_USERNAME }}
-          PA_API_TOKEN: ${{ secrets.PA_API_TOKEN }}
-          PA_HOST: ${{ secrets.PA_HOST }}
-        run: |
-          set -e
-          
-          if [ -z "$PA_API_TOKEN" ]; then
-            echo "Error: PA_API_TOKEN secret is missing!"
-            exit 1
-          fi
-
-          # 1. Upload the deploy.sh script (raw binary upload is most reliable)
-          echo "Uploading scripts/deploy.sh..."
-          curl -s -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/files/path/home/$PA_USERNAME/deploy.sh" \
-               -H "Authorization: Token $PA_API_TOKEN" \
-               --data-binary @scripts/deploy.sh
-          
-          # 2. Delete old log if it exists to avoid reading stale data
-          echo "Cleaning old log..."
-          curl -s -X DELETE "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/files/path/home/$PA_USERNAME/deploy.log" \
-               -H "Authorization: Token $PA_API_TOKEN" || true
-          
-          # 3. Trigger the deploy.sh script via bash
-          # Running via 'bash' avoids the need for chmod +x
-          echo "Executing deployment script..."
-          DEPLOY_RESPONSE=$(curl -s -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/" \
-               -H "Authorization: Token $PA_API_TOKEN" \
-               -H "Content-Type: application/json" \
-               -d "{\"executable\": \"bash\", \"arguments\": \"/home/$PA_USERNAME/deploy.sh\"}")
-          
-          DEPLOY_CONSOLE_ID=$(echo "$DEPLOY_RESPONSE" | jq -r '.id')
-          
-          if [ "$DEPLOY_CONSOLE_ID" == "null" ] || [ -z "$DEPLOY_CONSOLE_ID" ]; then
-            echo "Error: Failed to create console. Response:"
-            echo "$DEPLOY_RESPONSE"
-            exit 1
-          fi
-          echo "Deploy console: $DEPLOY_CONSOLE_ID"
-          
-          # 4. Poll the log file for progress
-          echo "Polling deployment log..."
-          MAX_ATTEMPTS=15
-          WAIT_TIME=10
-          DEPLOY_SUCCESS=false
-          
-          for i in $(seq 1 $MAX_ATTEMPTS); do
-            echo "Attempt $i/$MAX_ATTEMPTS (waiting ${WAIT_TIME}s)..."
-            sleep $WAIT_TIME
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ssh.pythonanywhere.com
+          username: ${{ secrets.PA_USERNAME }}
+          password: ${{ secrets.PA_PASSWORD }}
+          script: |
+            set -e
+            echo "🚀 Starting deployment via SSH..."
             
-            LOG_CONTENT=$(curl -s "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/files/path/home/$PA_USERNAME/deploy.log" \
-                 -H "Authorization: Token $PA_API_TOKEN")
+            PROJECT_DIR="~/Learn_French"
+            VENV_PATH="~/.virtualenvs/myenv"
             
-            # If the response is JSON with 'detail', the file doesn't exist yet
-            if echo "$LOG_CONTENT" | jq -e '.detail' > /dev/null 2>&1; then
-              echo "Log file not created yet..."
-              continue
-            fi
+            cd $PROJECT_DIR
             
-            if [ -z "$LOG_CONTENT" ]; then
-              echo "Log file is empty..."
-              continue
-            fi
+            echo "📥 Pulling latest changes..."
+            git pull origin main
             
-            echo "=== Current Log Content ==="
-            echo "$LOG_CONTENT"
-            echo "==========================="
+            echo "🐍 Activating virtualenv and installing dependencies..."
+            source $VENV_PATH/bin/activate
+            pip install -r requirements.txt
             
-            if echo "$LOG_CONTENT" | grep -q "DEPLOYMENT_COMPLETE"; then
-              echo "✅ Deployment successful!"
-              DEPLOY_SUCCESS=true
-              break
-            fi
+            echo "🗄️ Running migrations..."
+            python manage.py migrate
             
-            if echo "$LOG_CONTENT" | grep -q "ERROR:"; then
-              echo "❌ Deployment script encountered errors."
-              exit 1
-            fi
-          done
-          
-          # 5. Cleanup: Delete the console
-          echo "Cleaning up console $DEPLOY_CONSOLE_ID..."
-          curl -s -X DELETE "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/$DEPLOY_CONSOLE_ID/" \
-               -H "Authorization: Token $PA_API_TOKEN" || true
-          
-          if [ "$DEPLOY_SUCCESS" = false ]; then
-            echo "❌ Timeout: Deployment did not complete in time."
-            exit 1
-          fi
-
-          # 6. Reload the web app
-          echo "Reloading web app $PA_HOST..."
-          curl -f -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/webapps/$PA_HOST/reload/" \
-               -H "Authorization: Token $PA_API_TOKEN"
-          
-          echo "🚀 Deployment completed successfully!"
+            echo "📁 Collecting static files..."
+            python manage.py collectstatic --noinput
+            
+            echo "♻️ Reloading web app..."
+            # Touching the WSGI file reloads the app on PythonAnywhere
+            touch /var/www/${{ secrets.PA_USERNAME }}_pythonanywhere_com_wsgi.py
+            
+            echo "✅ Deployment complete!"
