--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -48,8 +48,8 @@ jobs:
             echo "🗄️ Running migrations..."
             python manage.py migrate
             
-            echo "📁 Collecting static files..."
-            python manage.py collectstatic --noinput
+            echo "📁 Collecting static files (with cleanup)..."
+            python manage.py collectstatic --noinput --clear
             
             echo "♻️ Reloading web app..."
             # Attempt to reload by touching the WSGI file. 
@@ -65,4 +65,14 @@ jobs:
               touch "$WSGI_FILE"
             fi
             
-            echo "✅ Deployment complete!"
+            echo "🔍 Performing health check..."
+            # Wait a few seconds for the reload to take effect
+            sleep 5
+            HEALTH_CHECK_URL="https://${{ secrets.PA_HOST }}"
+            if curl -s --head "$HEALTH_CHECK_URL" | grep "200 OK" > /dev/null; then
+              echo "✅ Health check passed: $HEALTH_CHECK_URL is up!"
+            else
+              echo "⚠️ Health check warning: $HEALTH_CHECK_URL returned non-200 status. Please check manually."
+            fi
+            
+            echo "🎉 Deployment finished successfully!"
