--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}
 
     steps:
       - uses: actions/checkout@v4
@@ -25,9 +25,16 @@ jobs:
           script: |
             set -e
             echo "🚀 Starting deployment via SSH..."
+            echo "📍 Current user: $(whoami)"
+            echo "📍 Current directory: $(pwd)"
             
             PROJECT_DIR="~/Learn_French"
             VENV_PATH="$PROJECT_DIR/.venv"
+            
+            if [ ! -d "$PROJECT_DIR" ]; then
+              echo "❌ Error: Project directory $PROJECT_DIR not found!"
+              exit 1
+            fi
             
             cd $PROJECT_DIR
             
