--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,44 @@
-# Deployment workflow for PythonAnywhere
-name: Deploy to PythonAnywhere
+# CI/CD Pipeline for FrenchLessons
+name: CI/CD Pipeline
 
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+          
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          
+      - name: Run Tests
+        run: |
+          python manage.py test apps -v 2
+        env:
+          SECRET_KEY: 'test-key-for-ci'
+          DEBUG: 'True'
+          ALLOWED_HOSTS: 'localhost'
+          GOOGLE_CLIENT_ID: 'dummy-client-id-for-ci'
+          GOOGLE_CLIENT_SECRET: 'dummy-client-secret-for-ci'
+
   deploy:
+    name: Deploy to PythonAnywhere
+    needs: test
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     
     steps:
@@ -58,8 +89,6 @@ jobs:
             python manage.py collectstatic --noinput --clear
             
             echo "♻️ Reloading web app..."
-            # Attempt to reload by touching the WSGI file. 
-            # We try both the default username.pythonanywhere.com and the custom domain format.
             PA_USER=${{ secrets.SSH_USERNAME || secrets.PA_USERNAME }}
             WSGI_FILE="/var/www/${PA_USER}_pythonanywhere_com_wsgi.py"
             CUSTOM_WSGI="/var/www/$(echo "${{ secrets.PA_HOST }}" | sed 's/\./_/g')_wsgi.py"
@@ -73,7 +102,6 @@ jobs:
             fi
             
             echo "🔍 Performing health check..."
-            # Wait a few seconds for the reload to take effect
             sleep 5
             HEALTH_CHECK_URL="https://${{ secrets.PA_HOST }}"
             if curl -s --head "$HEALTH_CHECK_URL" | grep "200 OK" > /dev/null; then
