--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,6 @@ requests==2.32.3
 pyjwt==2.10.1
 cryptography==44.0.0
 whitenoise==6.8.2
+sentry-sdk[django]==2.19.2
 pytest==8.3.4
 pytest-django==4.9.0
